Requirements code-style update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 beautifulsoup4==4.8.2
+flake8==3.7.9
+flake8-builtins==1.4.2
+flake8-import-order==0.18.1
 lxml==4.5.0
+pyflakes==2.1.1
 pytest==5.3.5
