--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 beautifulsoup4==4.8.2
+clize==4.1.1
 flake8==3.7.9
+flake8-bugbear==20.1.4
 flake8-builtins==1.4.2
+flake8-expression-complexity==0.0.6
+flake8-functions==0.0.4
 flake8-import-order==0.18.1
+flake8-logging-format==0.6.0
+flake8-mypy==17.8.0
 lxml==4.5.0
 mypy==0.761
 pyflakes==2.1.1
